# biomonitor-capstone

./: .gitignore  README.md  bitacora.txt  pyproject.toml  step_by_step.txt  technical_report.md
airflow_home/: airflow.cfg  airflow.db  airflow.db-shm  airflow.db-wal  dags  simple_auth_manager_passwords.json.generated
dags/: biomonitor_pipeline.py
dbt_transformation/models/marts/core/: fct_biodiversity_sightings.sql
dbt_transformation/models/staging/gbif_biodiversity/: schema.yml  sources.yml  stg_gbif_occurrences.sql
dbt_transformation/seeds/: iucn_statuses.csv
ingestion/: gbif_ingestion.py  pyproject.toml
scripts/: monitor_ingestion.py  rescue_data_final.py
terraform/: main.tf  variables.tf
