[project]
name = "biomonitor-capstone"
version = "0.1.0"
description = "Global Mammal Biodiversity Pipeline: End-to-end data platform (API -> GCS -> BigQuery -> dbt)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-bigquery>=1.3.3",
    "dlt[bigquery]",
    "gcsfs",
    "google-cloud-bigquery-storage",
    "pandas",
    "pyarrow",
]
